--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Model\Nodes\Node2D.cs" />
     <Compile Include="Model\Nodes\Levels\LevelBase.cs" />
     <Compile Include="Model\Nodes\RenderableNode.cs" />
+    <Compile Include="Model\Nodes\Screens\MainMenu.cs" />
     <Compile Include="Model\Nodes\SoundPlayer.cs" />
     <Compile Include="Model\Nodes\UI\Button.cs" />
     <Compile Include="Model\Nodes\UI\Label.cs" />
