--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -145,12 +145,12 @@
     <Compile Include="Model\Nodes\Entities\LevelShield.cs" />
     <Compile Include="Model\Nodes\Entities\PlayerShip.cs" />
     <Compile Include="Model\Nodes\Entities\ShieldSegment.cs" />
-    <Compile Include="Model\Nodes\Levels\Level1.cs" />
+    <Compile Include="Model\Nodes\Screens\Levels\Level1.cs" />
     <Compile Include="Model\Nodes\Screen.cs" />
     <Compile Include="Model\Nodes\OneShotSoundPlayer.cs" />
     <Compile Include="Model\Nodes\Node.cs" />
     <Compile Include="Model\Nodes\Node2D.cs" />
-    <Compile Include="Model\Nodes\Levels\LevelBase.cs" />
+    <Compile Include="Model\Nodes\Screens\Levels\LevelBase.cs" />
     <Compile Include="Model\Nodes\RenderableNode.cs" />
     <Compile Include="Model\Nodes\Screens\MainMenu.cs" />
     <Compile Include="Model\Nodes\SoundPlayer.cs" />
