--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Model\Nodes\Entities\Enemies\IntermediateEnemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\BasicEnemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\Enemy.cs" />
+    <Compile Include="Model\Nodes\Entities\Enemies\MasterEnemyState.cs" />
     <Compile Include="Model\Nodes\Entities\EnemyGun.cs" />
     <Compile Include="Model\Nodes\Entities\Entity.cs" />
     <Compile Include="Model\Nodes\Entities\GrazeHitbox.cs" />
