--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -148,6 +148,9 @@
     <Compile Include="Model\Nodes\Entities\LevelShield.cs" />
     <Compile Include="Model\Nodes\Entities\PlayerShip.cs" />
     <Compile Include="Model\Nodes\Entities\ShieldSegment.cs" />
+    <Compile Include="Model\Nodes\PowerUps\PowerUp.cs" />
+    <Compile Include="Model\Nodes\PowerUps\ReflectionShield.cs" />
+    <Compile Include="Model\Nodes\PowerUps\ReflectionShieldPowerUp.cs" />
     <Compile Include="Model\Nodes\Screens\Levels\Level1.cs" />
     <Compile Include="Model\Nodes\Screen.cs" />
     <Compile Include="Model\Nodes\OneShotSoundPlayer.cs" />
@@ -246,6 +249,9 @@
     </Compile>
     <Compile Include="View\Sprites\Background\StarSprite.xaml.cs">
       <DependentUpon>StarSprite.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Sprites\PowerUps\ReflectiveShieldSprite.xaml.cs">
+      <DependentUpon>ReflectiveShieldSprite.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Sprites\UI\EmptyHeartSprite.xaml.cs">
       <DependentUpon>EmptyHeartSprite.xaml</DependentUpon>
@@ -393,6 +399,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Sprites\Entities\ShieldSegmentSprite.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Sprites\PowerUps\ReflectiveShieldSprite.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
